fixed some weird overflow css

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,17 @@
-html {
-  overflow: hidden;
+html,
+body {
+  width: 100%;
   height: 100%;
+  overflow: hidden;
+}
+
+#root {
+  height: 100%;
+  overflow: scroll;
+  -webkit-overflow-scrolling: touch;
 }
 
 body {
-  height: 100%;
-  overflow: auto;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
